fixed: horizontal scrolling and sticking #15
- horizontal scrolling with a large number of elements in the header menu
- sticking the menu to the logo

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -5,6 +5,8 @@
   display: flex;
   margin: 0;
   list-style-type: none;
+  flex-wrap: wrap;
+  padding-left: 50px;
 
   &__item {
     position: relative;
